--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
     </style>
     <link href="style.css" rel="stylesheet">
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
   </head>
   <body>
     <header class="startup text-center text-white d-flex">
